# Dalux-Build-API

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  npm-publish.yml  python-publish.yml  release.yml
python/: .coverage  README.md  pyproject.toml
python/dalux_build/: __init__.py  api_client.py  configuration.py
python/dalux_build/api/: __init__.py  companies.py  company_catalog.py  file_areas.py  file_revisions.py  file_upload.py  files.py  folders.py  forms.py  inspection_plans.py  project_templates.py  projects.py  tasks.py  test_plans.py  users.py  version_sets.py  work_packages.py
python/tests/: test_api.py  test_core.py
src/: apiClient.js  configuration.js  index.js
src/api/: CompaniesApi.js  CompanyCatalogApi.js  FileAreasApi.js  FileRevisionsApi.js  FileUploadApi.js  FilesApi.js  FoldersApi.js  FormsApi.js  InspectionPlansApi.js  ProjectTemplatesApi.js  ProjectsApi.js  TasksApi.js  TestPlansApi.js  UsersApi.js  VersionSetsApi.js  WorkPackagesApi.js
test/: client.test.js
