[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dalux-build"
version = "1.0.0"
description = "Python client for the Dalux Build REST API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["dalux", "build", "api", "client", "construction"]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dalux_build*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
